2017-03-07  Kocsen Chung  <kocsen_chung@apple.com>

        Perf and layout test results should report using correct scm revision.
        https://bugs.webkit.org/show_bug.cgi?id=169171

        Reviewed by Ryosuke Niwa.

        For accurate record keeping, perf test and layout test results should
        report using the native scm revision as an identifier.
        To do so we introduce a new scm functions:
            `native_revision()` and `timestamp_of_native_revision()`.
        The former is responsible for returning a git hash if scm.git or an
        svn revision if scm.svn. The latter is responsible for retrieving the correct timestamp.
        We also add the corresponding tests and a helper function `_most_recent_log_for_revision`.

        * Scripts/webkitpy/common/checkout/scm/scm.py:
        (SCM.run):
        Drive-by indentation fix to adhere to WebKit style conventions.
        (SCM.svn_revision):
        Remove superfluous comment.
        (SCM.native_revision):
        Add new abstract function `native_revision` and make it a `_subclass_must_implement()`
        as we want to closely mimic `svn_revision()` function due to their similar behavior.
        (SCM.timestamp_of_native_revision):
        Add new abstract function `timestamp_of_native_revision` to closely mimic `timestamp_of_revision`.

        * Scripts/webkitpy/common/checkout/scm/git.py:
        (Git._most_recent_log_for_revision):
        New helper function similar to `_most_recent_log_matching` that is git hash friendly.
        (Git.native_revision):
        Implement new function `native_revision()`. Get the native_revision by running:

            `git log -1 --pretty=format:%H`

        and thus returning the latest git hash (in long format).
        (Git.timestamp_of_native_revision):
        Since perftestrunner and layout_test.controllers.manager use the new native_revision
        function, we create a new native_revision timestamp retriever.